Spam CSS correcting namespacing

--- a/mods/spam/web/css/spam-base.css
+++ b/mods/spam/web/css/spam-base.css
@@ -14,7 +14,7 @@
     gap: 2rem;
 }
 
-.tool-container {
+.spam-tool-container {
     width: fit-content;
     margin: auto;
     margin-top: 10rem;
@@ -23,7 +23,7 @@
     flex-direction: column;
 }
 
-.loop-dot {
+.spam-loop-dot {
     height: 2rem;
     width: 2rem;
     background-color: red;
